--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                                 Platform. </p>
                         </div>
                         <!--//item-->
-                        <div class="item" name="Job2">
+                        <!-- <div class="item" name="Job2">
                             <h3 class="title">Software Engineering Position - <span class="place">
                     <a href="#">Company B</a>
                   </span>
@@ -125,7 +125,7 @@
                                 manufacturing
                                 processes.
                             </p>
-                        </div>
+                        </div> -->
                     </div>
                     <!--//content-->
                 </div>
@@ -148,6 +148,8 @@
                             <li>Software Engineering</li>
                             <li>Computer Organization and Assembly</li>
                             <li>Data Structures and Algorithm</li>
+                            <li>System Programming</li>
+                            <li>Data Science</li>
                         </ul>
                     </div>
                     <!--//content-->
@@ -170,7 +172,7 @@
                             <li>
                                 <i class="fa fa-envelope"></i>
                                 <span class="sr-only">Email:</span>
-                                <a href="mailto:james@website.com">James@website.com</a>
+                                <a href="mailto: victor.lor@outlook.com">victor.lor@outlook.com</a>
                             </li>
                             <li>
                                 <i class="fa fa-link"></i>
@@ -214,7 +216,7 @@
                             </div>
                             <!--//item-->
                             <div class="item">
-                                <h3 class="level-title">CI/CD - Jenkins <span class="level-label" data-placement="left"
+                                <h3 class="level-title">Python / Jupyter Notebook <span class="level-label" data-placement="left"
                                                                               data-animation="true">Intermediate</span>
                                 </h3>
                             </div>
@@ -227,24 +229,7 @@
                             </div>
                             <!--//item-->
                             <div class="item">
-                                <h3 class="level-title">AWS <span class="level-label" data-placement="left"
-                                                                  data-animation="true">Certified CCP</span>
-                                </h3>
-                            </div>
-                            <!--//item-->
-                            <div class="item">
-                                <h3 class="level-title">Azure <span class="level-label" data-placement="left"
-                                                                    data-animation="true">Certified Azure Fundamentals</span>
-                                </h3>
-                            </div>
-                            <!--//item-->
-                            <div class="item">
-                                <h3 class="level-title">PHP <span class="level-label">Intermediate</span>
-                                </h3>
-                            </div>
-                            <!--//item-->
-                            <div class="item">
-                                <h3 class="level-title">Linux <span class="level-label">Intermediate</span>
+                                <h3 class="level-title">C++ <span class="level-label">Intermediate</span>
                                 </h3>
                             </div>
                             <!--//item-->
@@ -254,11 +239,6 @@
                                 <!--//level-bar-->
                                 <!--<div class="level-bar"><div class="level-bar-inner" data-level="45%"></div></div>
                                     -->
-                            </div>
-                            <!--//item-->
-                            <div class="item">
-                                <h3 class="level-title">Maven <span class="level-label">Intermediate</span>
-                                </h3>
                             </div>
                             <!--//item-->
                         </div>
@@ -276,7 +256,7 @@
                             <h5><a href="projects.html">View My Latest Projects</a></h5>
                         </div>
                         <div class="item">
-                            <h5><a href="github.com">View My GitHub</a></h5>
+                            <h5><a href="https://github.com/Lor-Victor">View My GitHub</a></h5>
                         </div>
 
 
