--- a/projects.html
+++ b/projects.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>James Gosling - Projects</title>
+    <title>Victor Lor - Projects</title>
     <!-- Meta -->
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -75,8 +75,9 @@
 
                     <div class="featured-image has-ribbon" style="background-color:black">
                         <a href="https://github.com/uncg-csc340/dyvert" target="_blank">
+                            <!--// INSERT THE IMAGE HERE -->
                             <img class="img-fluid project-image rounded shadow-sm"
-                                 src="assets/images/projects/dyvert.png" alt="project name"
+                                 src="assets/images/projects/" alt="project name"
                                  style="width:80%"/>
                         </a>
                         <div class="ribbon">
@@ -85,17 +86,14 @@
                     </div>
 
                     <h3 class="title mb-3"><a href="https://github.com/Lor-Victor/Lovely-Lawns"
-                                              target="_blank">Dyvert</a>
+                                              target="_blank">Lovely Lawns</a>
                     </h3>
 
                     <div class="desc text-start">
-                        <p>The goal of the DyVert web application is to connect users to new media content and to
-                            provide an interactive method of bookmarking interesting content. Content Creators
-                            create content cards describing the media, genre, synopsis, and other details. Users are
-                            presented with the content cards, and they either swipe right to add the card to their
-                            collection or left to discard the card. Users can filter content cards shown to them
-                            based on media type and/or genre. Users can also add reviews for any media that is part
-                            of their collection. Admins are responsible for content moderation and membership. </p>
+                        <p>The goal of the Lovely Lawn web application is to connect users with a passion for
+                            gardening or taking care of plants with other like minded people. Users can create
+                            posts or comment on the posts of other users. Admins are responsible for moderating 
+                            and deleting contents that violate the rules of the application.  </p>
                     </div><!--//desc-->
                     <a class="btn btn-cta-secondary" href="https://github.com/uncg-csc340/dyvert" target="_blank"><i
                             class="fa fa-thumbs-up"></i> Back my project</a>
