completed the requirements and extra features

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <h2 class="desc">Computer Science Student</h2>
             <ul class="social list-inline">
                 <li class="list-inline-item">
-                    <a href="http://www.linkedin.com/VictorLor">
+                    <a href="https://www.linkedin.com/in/victor-lor-215719304/>
                         <i class="fa fa-linkedin"></i>
                     </a>
                 </li>
@@ -177,7 +177,24 @@
                             <li>
                                 <i class="fa fa-link"></i>
                                 <span class="sr-only">Website:</span>
-                                <a href="#">http://www.website.com</a>
+                                <a href="#">https://lor-victor.github.io/</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <!--//content-->
+                </div>
+                <!--//section-inner-->
+            </aside>
+            <aside class="info aside section">
+                <div class="section-inner">
+                    <h2 class="heading">CSC 372 Web Programming Links</h2>
+                    <div class="content">
+                        <ul class="list-unstyled">
+                            
+                            <li>
+                                <i class="fa fa-link"></i>
+                                <span class="sr-only">Website:</span>
+                                <a href="https://github.com/Lor-Victor/Lor-Victor.github.io/tree/main/csc372-hw/">Homework Link</a>
                             </li>
                         </ul>
                     </div>
@@ -221,12 +238,12 @@
                                 </h3>
                             </div>
                             <!--//item-->
-                            <div class="item">
+                           <!--  <div class="item">
                                 <h3 class="level-title">Javascript &amp; jQuery <span class="level-label"
                                                                                       data-placement="left"
                                                                                       data-animation="true">Intermediate</span>
                                 </h3>
-                            </div>
+                            </div> -->
                             <!--//item-->
                             <div class="item">
                                 <h3 class="level-title">C++ <span class="level-label">Intermediate</span>
