--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             <section class="experience section">
                 <div class="section-inner">
                     <h2 class="heading">Work Experience</h2>
-                    <div class="content">
+                    <!-- <div class="content">
                         <div class="item" name="Job1">
                             <h3 class="title">Software Engineering Position <span class="place">
                     <a href="#">Company A</a>
@@ -107,7 +107,7 @@
                                 • Followed the continuous integration Jenkins pipeline to deploy applications to
                                 OpenShift Cloud
                                 Platform. </p>
-                        </div>
+                        </div> -->
                         <!--//item-->
                         <!-- <div class="item" name="Job2">
                             <h3 class="title">Software Engineering Position - <span class="place">
