added project milestone 1

--- a/index.html
+++ b/index.html
@@ -186,12 +186,15 @@
                         <h2 class="heading">CSC 372 Web Programming Links</h2>
                         <div class="content">
                             <ul class="list-unstyled">
-
                                 <li>
                                     <i class="fa fa-link"></i>
                                     <span class="sr-only">Website:</span>
-                                    <a href="https://github.com/Lor-Victor/Lor-Victor.github.io/tree/main/csc372-hw/">Homework
-                                        Link</a>
+                                    <a href="/csc372-hw/Tanks for Fish/templates/index.html">Project Milestone 1: Tanks For Fish</a>
+                                </li>
+                                <li>
+                                    <i class="fa fa-link"></i>
+                                    <span class="sr-only">Website:</span>
+                                    <a href="/csc372-hw/hw2/templates/index.html">Assignment 2: Granny's Pie</a>
                                 </li>
                             </ul>
                         </div>
