--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
                 <h2 class="desc">Computer Science Student</h2>
                 <ul class="social list-inline">
                     <li class="list-inline-item">
-                        <a href="https://www.linkedin.com/in/victor-lor-215719304/>
-                        <i class=" fa fa-linkedin"></i>
+                        <a href="https://www.linkedin.com/in/victor-lor-215719304/">
+                        <i class="fa fa-linkedin"></i>
                         </a>
                     </li>
                     <li class="list-inline-item">
@@ -189,12 +189,22 @@
                                 <li>
                                     <i class="fa fa-link"></i>
                                     <span class="sr-only">Website:</span>
-                                    <a href="/csc372-hw/Tanks for Fish/templates/index.html">Project Milestone 1: Tanks For Fish</a>
+                                    <a href="https://github.com/Lor-Victor?tab=repositories">GitHub Repository</a>
+                                </li>
+                                <li>
+                                    <i class="fa fa-link"></i>
+                                    <span class="sr-only">Website:</span>
+                                    <a href="/csc372-hw/Tanks-for-Fish/templates/index.html">Project Milestone 1: Tanks For Fish</a>
                                 </li>
                                 <li>
                                     <i class="fa fa-link"></i>
                                     <span class="sr-only">Website:</span>
                                     <a href="/csc372-hw/hw2/templates/index.html">Assignment 2: Granny's Pie</a>
+                                </li>
+                                <li>
+                                    <i class="fa fa-link"></i>
+                                    <span class="sr-only">Website:</span>
+                                    <a href="/csc372-hw/hw3/templates/index.html">Assignment 3: Layouts + Events</a>
                                 </li>
                             </ul>
                         </div>
