changed link and pushed part of hw4

--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
                                 <li>
                                     <i class="fa fa-link"></i>
                                     <span class="sr-only">Website:</span>
-                                    <a href="/csc372-hw/Tanks-for-Fish/templates/index.html">Project Milestone 1: Tanks For Fish</a>
+                                    <a href="/csc372-hw/Tanks-for-Fish/templates/index.html">Project: Tanks For Fish</a>
                                 </li>
                                 <li>
                                     <i class="fa fa-link"></i>
