added reset button and counter for the wins

--- a/csc372-hw/hw4/index.html
+++ b/csc372-hw/hw4/index.html
@@ -25,7 +25,10 @@
         <section id="outcome">
             <h3>Outcome</h3>
             <p id="result"></p>
+            <p>User: <span id="user-wins">0</span></p>
+            <p>Computer: <span id="computer-wins">0</span></p>
         </section>
+        <button id="reset-btn">Reset</button>
     </main>
 </body>
 
