--- a/index.html
+++ b/index.html
@@ -211,6 +211,11 @@
                                     <span class="sr-only">Website:</span>
                                     <a href="/csc372-hw/hw4/index.html">Assignment 4: Callbacks</a>
                                 </li>
+                                <li>
+                                    <i class="fa fa-link"></i>
+                                    <span class="sr-only">Website:</span>
+                                    <a href="/csc372-hw/hw5/index.html">Assignment 5: Fetch</a>
+                                </li>
                             </ul>
                         </div>
                         <!--//content-->
